GNOME Bugzilla – Bug 781084
todo.txt: fix a memory leak in parser
Last modified: 2017-04-20 15:28:09 UTC
.
Created attachment 349542 [details] [review] todo.txt: fix a memory leak in parser
Created attachment 350140 [details] [review] todo.txt: fix a memory leak in parser Same patch with g_autofree.
Attachment 350140 [details] pushed as 2cf427f - todo.txt: fix a memory leak in parser