todo.txt: fix a memory leak in parser

https://bugzilla.gnome.org/show_bug.cgi?id=781084